2003-01-06  Jon Trowbridge  <trow@ximian.com>

	* gtk/pygtktreemodel.c (pygtk_generic_tree_model_get_path):
	pyg_unblock_threads was being called twice.

2003-01-05  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/libglade.override: protect config.h by an ifdef.

2003-01-01  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.override (_wrap_gtk_text_buffer_insert_at_cursor) 
	(_wrap_gtk_text_buffer_insert_at_cursor) 
	(_wrap_gtk_text_buffer_insert_interactive) 
	(_wrap_gtk_text_buffer_insert_interactive_at_cursor): Wrap, so you
	don't have to specify the length of the string. For
	consistency. (It's not slower since Python does always store the
	length inside the PyStringObject struct). Patch (mostly) by 
	John Finlay, fixes #102186.
	(_wrap_gtk_text_buffer_get_selection_bounds): Remove unused
	keyword argument and not up-to-date comment.

	* gtk/gtk.defs (GtkTreeView.scroll_to_cell): Add default values.

	* gtk/gtk.override (_wrap_gtk_tree_selection_get_selected): Check
	the mode before calling gtk_tree_selection_get_selected, this
	avoids an abort() in gtk+.

	* pygtk.py: Updated to fix #102180, so .require() can be called
	twice and won't do anything the second time (eg, not raise an
	error) based upon patch by warner-gnome.bugzilla@lothar.com

2002-12-29  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.defs (set_cursor): Set default parameters.

2002-12-28  Johan Dahlin  <jdahlin@async.com.br>

	* gobjectmodule.c, gtk/gtk.override, gtk/pygtkcellrenderer.c,
	gtk/pygtktreemodel: Improve threading support by adding
	pyg_thread_block/unblock around all PyObject_Call* and
	g_object_refs.
	Based upon patch by Jon Trowbridge. Fixes #99102.
	
	* gtk/gdk-types.defs (ColorSpace): Add.

	* gtk/gdk.defs (GdkRectangle.intersect, GdkRectangle.union,
	gdk.atom_intern): Add

	* gtk/gdk.override (_wrap_gdk_rectangle_intersect): Impl.
	(_wrap_gdk_rectangle_union): Impl. (doesn't follow the GDK api to
	100%, but this is much nicer from a python point of view)
