@@ -32,4 +32,6 @@ pango.c
 pygtk-2.0.pc
 pygtk.spec
 atk.c
-
+build
+dist
+MANIFEST
