@@ -1,0 +1,10 @@
+exclude atk.c pango.c gtk/gtk.c gtk/gdk.c gtk/libglade.c
+include ChangeLog AUTHORS COPYING MAPPING NEWS README THREADS TODO
+include MANIFEST.in
+include pygobject.h  pygobject-private.h
+include *.defs *.override
+include pygtk.py pygtk-2.0.pc.in
+recursive-include gtk *.override *.defs *.h
+recursive-include codegen README.defs *.py pygtk-codegen-2.0.in 
+recursive-include examples README *.py *.xpm 
+global-exclude */CVS/* .cvsignore
