@@ -1,3 +1,11 @@
+2003-01-07  Johan Dahlin  <jdahlin@async.com.br>
+
+	* setup.py, MANIFEST.in: Added distutils support
+	
+	* Makefile.am (EXTRA_DIST): Added setup.py and MANIFEST.in here.
+	
+	* .cvsignore: Add build/dist/MANIFEST here
+	
 2003-01-06  Jon Trowbridge  <trow@ximian.com>
 
 	* gtk/pygtktreemodel.c (pygtk_generic_tree_model_get_path):
@@ -6,7 +14,7 @@
 2003-01-05  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gtk/libglade.override: protect config.h by an ifdef.
-
+	
 2003-01-01  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gtk/gtk.override (_wrap_gtk_text_buffer_insert_at_cursor) 
